<resources>
    <string name="app_name">Word Counter</string>
    <string name="about_activity_name">About</string>


    <string name="id_main_edit_text">Main Edit Text ID</string>
    <string name="id_toolbar_top">Toolbar Top ID</string>
    <string name="id_toolbar_bottom">Toolbar Bottom ID</string>

    <string name="id_button_word">Word Button ID</string>
    <string name="id_button_char">Character Button ID</string>
    <string name="id_button_sent">Sentence Button ID</string>
    <string name="id_button_para">Paragraph Button ID</string>


    <string name="alert_button_ok">OK</string>
    <string name="alert_button_done">Done</string>



    <string name="placeholder_please_input_text">Type or paste here&#8230;</string>

    <string name="progress_dialog_counting">Counting&#8230;</string>


    <string name="alert_counter_message">Words: %1$s\nCharacters: %2$s\nSentences: %3$s\nParagraphs: %4$s</string>




    <string name="unit_word_singular">word</string>
    <string name="unit_word_plural">words</string>

    <string name="unit_short_word_singular">word</string>
    <string name="unit_short_word_plural">words</string>

    <string name="unit_character_singular">character</string>
    <string name="unit_character_plural">characters</string>

    <string name="unit_short_character_singular">char.</string>
    <string name="unit_short_character_plural">chars.</string>

    <string name="unit_sentence_singular">sentence</string>
    <string name="unit_sentence_plural">sentences</string>

    <string name="unit_short_sentence_singular">sent.</string>
    <string name="unit_short_sentence_plural">sents.</string>

    <string name="unit_paragraph_singular">paragraph</string>
    <string name="unit_paragraph_plural">paragraphs</string>

    <string name="unit_short_paragraph_singular">para.</string>
    <string name="unit_short_paragraph_plural">paras.</string>



    <string name="alert_before_clear_title">Clear all content?</string>
    <string name="alert_before_clear_message">WARNING: This action is irreversible!</string>

    <string name="alert_before_clear_button_cancel">Cancel</string>
    <string name="alert_before_clear_button_clear">Clear</string>


    <string name="action_count">Count&#8230;</string>
    <string name="action_clear">Clear</string>
    <string name="action_about">About</string>


    <string name="about_section_name">About</string>

    <string name="share_app">Share Word Counter Tools!</string>
    <string name="share_app_intent_title">Share via</string>
    <string name="share_app_extra_text">Hi! Still counting words one by one? Get Word Counter Tools on Google Play today!\n\n%s</string>

    <string name="about_developer">Jason Ho</string>
    <string name="about_developer_summary">Developer</string>

    <string name="about_developer_email">eflyjason@gmail.com</string>
    <string name="about_developer_email_summary">Email</string>

    <string name="about_developer_url">http://www.arefly.com/</string>
    <string name="about_developer_url_summary">Website</string>

    <string name="about_app_version_info">Version %s</string>
    <string name="about_app_version_info_summary">Build %d</string>




    <string name="saved_string_on_pause">String.On.Pause</string>

</resources>
